# nomi-desktop

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: provider-crud-handoff.md
mockups/: sidebar-chat-shell-prototype.html
public/: sidebar-material-prototype.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: ids.ts  remoteSessions.ts  store.ts  systemNotifications.ts  themeAccent.ts  types.ts
src/protocol/: remote.ts
src/state/: reducer.ts
src/transport/: remoteClient.ts
src/ui/: AnimatedMessageContent.tsx  App.tsx  MainShell.tsx  MarkdownContent.tsx  mcpJson.ts  presentation.ts  styles.css
tests/: app.test.tsx  mainShellCrud.test.tsx  markdownContent.test.tsx  mcpJson.test.ts  reducer.test.ts  setup.ts  store.test.ts
