[package]
name = "nomi-desktop"
version = "0.1.1"
description = "Nomi Desktop Shell"
authors = ["nomi contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.1"
tauri-plugin-websocket = "2.4.1"
dirs = "5.0.1"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
